# kaqt

./: .gitignore
C++/kaqt/: CMakeLists.txt  kaqt.sln
C++/kaqt/include/kaqt/foundation/: csv_writer.hpp  factory.hpp  id_generator.hpp  singleton.hpp
C++/kaqt/include/kaqt/providers/protobuf/: levelone_quote.pb.cc  levelone_quote.pb.h  symbology.pb.cc  symbology.pb.h
C++/kaqt/include/kaqt/providers/quickfix/: log_reader.hpp
C++/kaqt/include/kaqt/providers/quickfix/fix42/: message_factory.hpp
C++/kaqt/include/kaqt/providers/tt/: constants.hpp  fixadaptor_client.hpp  symbology_parser.hpp
C++/kaqt/include/kaqt/symbology/: client.hpp  symbol_factory.hpp  symbol_repository.hpp
C++/kaqt/kaqt/: kaqt.vcxproj  kaqt.vcxproj.filters
C++/kaqt/kaqt.apps.symbology.ca/: CMakeLists.txt  kaqt.apps.symbology.ca.vcxproj  kaqt.apps.symbology.ca.vcxproj.filters
C++/kaqt/kaqt.apps.tt/: CMakeLists.txt  kaqt.apps.tt.vcxproj  kaqt.apps.tt.vcxproj.filters  packages.config
C++/kaqt/kaqt.apps.tt.symbologyparser/: CMakeLists.txt  kaqt.apps.tt.symbologyparser.vcxproj  kaqt.apps.tt.symbologyparser.vcxproj.filters
C++/kaqt/kaqt.tests/: CMakeLists.txt  kaqt.tests.vcxproj  kaqt.tests.vcxproj.filters  packages.config
C++/kaqt/src/kaqt/apps/symbology/: ca_main.cpp
C++/kaqt/src/kaqt/apps/tt/: main.cpp
C++/kaqt/src/kaqt/apps/tt/symbology/: main.cpp
C++/kaqt/src/kaqt/foundation/: csv_writer.cpp  id_generator.cpp
C++/kaqt/src/kaqt/providers/quickfix/: log_reader.cpp
C++/kaqt/src/kaqt/providers/quickfix/fix42/: message_factory.cpp
C++/kaqt/src/kaqt/providers/tt/: constants.cpp  fixadaptor_client.cpp  symbology_parser.cpp
C++/kaqt/src/kaqt/symbology/: client.cpp  symbol_factory.cpp  symbol_repository.cpp
C++/kaqt/src/kaqt/tests/: main.cpp
archive/java/kaqt/: .project  pom.xml
archive/python/kaqt/kaqt/: download_rserver_data.py
archive/python/kaqt/kaqt/foundation/: read.py
archive/python/kaqt/kaqt/models/: ou_process.py
archive/python/kaqt/kaqt/rserver/: download.py
archive/python/notebooks/: RServer_Tick_Data.ipynb
data/: BacktestingSymbols.csv  symbology.csv
java/edutils/: .project  pom.xml
java/kaqt/: .classpath  config.properties  pom.xml
java/kaqt.supersonictrader/: .classpath  .project  pom.xml
java/kaqt/src/main/resources/: SpringConfig.xml
java/supersonic/: .classpath  .project  pom.xml
notes/: Tick Data Analysis.ipynb
proto/: levelone_quote.proto  symbology.proto
python/kaqt/: README.rst  kaqt_tests.py  setup.py
python/kaqt/kaqt/: symbology.py
python/kaqt/kaqt/backtest/: coint_tables.py  data.py  johansen.py  metrics.py  securities.py
python/kaqt/kaqt/backtest/api/: backtester.py  event.py  mktdata.py  orders.py  portfolio.py  risk.py  strategy.py
python/kaqt/kaqt/command_line/: database_instruments.py  download_settles.py  download_tickdata.py  futures_instruments_server.py  settles2hdf5.py  ticks2hdf5.py
python/kaqt/kaqt/foundation/: constants.py  io.py  utils.py
python/kaqt/kaqt/providers/: __init__.py  quandl.py
python/kaqt/kaqt/scripts/: mktdata_panel.py
python/kaqt/kaqt/ui/: ticks_player.py
python/kaqt/samples/: kaqt_backtest_data.ipynb  load_settles.py
python/notebooks/: parse_cme_fprf.ipynb  parse_quickfix_instruments.ipynb  parse_settles_data.ipynb  pivot_points.ipynb  store_ticks.ipynb  yield_curve.ipynb
shell/: pb_gen.sh
(+212 files in other folders)
